--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -1,3 +1,6 @@
+
+
+
 /* .App {
   text-align: center;
 }
@@ -36,3 +39,24 @@
     transform: rotate(360deg);
   }
 } */
+
+::-webkit-scrollbar {
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(62, 62, 62, 0.573); 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: inset 0 0 5px grey;  
+}
