--- a/src/pages/Home/Posts.css
+++ b/src/pages/Home/Posts.css
@@ -1,9 +1,9 @@
 .App {
-    font-family: sans-serif;
+    /* font-family: sans-serif;
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
+    justify-content: center; */
+    /* height: 100vh; */
   }
 #slider{
     display: flex;
@@ -12,13 +12,14 @@
   height: 250px;
   width: 100%;
   margin: 0 2px;
- 
+  
 }
 .carousel .thumb{
-    
+    margin:0 !important;
     display: none !important;
 
 }
+
 
 
   
