--- a/src/pages/Home/Posts.css
+++ b/src/pages/Home/Posts.css
@@ -19,30 +19,9 @@
     display: none !important;
 
 }
-/* #heart { 
-  position: relative; 
-  width: 100px; 
-  height: 90px; 
-} 
-
-#heart:before, #heart:after{
-  position: absolute; 
-    content: ""; 
-    left: 50px; 
-    top: 0; 
-    width: 50px; 
-    height: 80px; 
-    background: red; 
-    border-radius: 50px 50px 0 0; 
-    transform: rotate(-45deg); 
-    transform-origin: 0 100%;
+.carousel.carousel-slider{
+  height: 350px !important;
 }
-#heart:after { 
-    left: 0; 
-    transform: rotate(45deg); 
-    transform-origin :100% 100%; 
-} */
- 
 
 
 
